<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    tools:context=".todoapp.TodoActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="25dp"/>

    <TextView
        android:id="@+id/tvCategorias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categorias"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/tvTitulo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="25dp"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCategorias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvCategorias"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvTareas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mis_tareas"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/rvCategorias"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="25dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTareas"
        android:layout_width="match_parent"
        android:layout_height="325dp"
        app:layout_constraintTop_toBottomOf="@id/tvTareas"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edTituloTarea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/titulo_de_la_tarea"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@id/edDescTarea"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edDescTarea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/descripci_n_de_la_tarea"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@id/btnAddTarea"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddTarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a_adir_tarea"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>