<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    android:paddingHorizontal="30dp"
    android:paddingVertical="30dp"
    tools:context=".imcapp.CalculadoraActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvHombre"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginEnd="30dp"
        app:cardBackgroundColor="@color/cv_selected"
        app:cardCornerRadius="25dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toStartOf="@id/cvMujer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/male" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hombre"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvMujer"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:cardBackgroundColor="@color/cv_unselected"
        app:cardCornerRadius="25dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cvHombre"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/female" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mujer"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvAltura"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="25dp"
        app:cardBackgroundColor="@color/cv_unselected"
        app:cardCornerRadius="25dp"
        app:cardElevation="5dp"
        app:layout_constraintTop_toBottomOf="@id/cvHombre">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/altura"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvValorAltura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="120 CM"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rsAltura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stepSize="1"
                android:valueFrom="120"
                android:valueTo="200" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvPeso"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        app:cardBackgroundColor="@color/cv_unselected"
        app:cardCornerRadius="25dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toStartOf="@id/cvEdad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvAltura">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peso"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvValorPeso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="50 kg"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabMasPeso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="sum"
                    android:elevation="5dp"
                    android:src="@drawable/plus_one" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabMenosPeso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="res"
                    android:elevation="5dp"
                    android:src="@drawable/resta" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvEdad"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="25dp"
        app:cardBackgroundColor="@color/cv_unselected"
        app:cardCornerRadius="25dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cvPeso"
        app:layout_constraintTop_toBottomOf="@id/cvAltura">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edad"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvValorEdad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="20"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabMasEdad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="sum"
                    android:elevation="5dp"
                    android:src="@drawable/plus_one" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabMenosEdad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="res"
                    android:elevation="5dp"
                    android:src="@drawable/resta" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCalcular"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:text="@string/btn_calcular"
        android:textAllCaps="true"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvPeso"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>